# hcs-lld-management

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  SYSTEM_DESIGN.md  TODO.md  docker-compose.yml  项目使用说明.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  Makefile  alembic.ini  pyproject.toml  requirements.txt  run_checks.sh  run_tests.sh  seed.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: af3e9c2b8d14_multilevel_network_plane.py  b4d2a901c7e3_backup_config.py  c1f0d7e8a6b9_backup_schedule_time.py  c9ce20c8a1b2_initial.py  d5e6f7a8b9c0_users_auth.py  e6f7a8b9c0d1_plane_type_private_vrf.py  f7a8b9c0d1e2_plane_type_region_plane_updated_at.py  g8b9c0d1e2f3_global_plane_type_tree.py  h9c0d1e2f3a4_region_plane_gateway_fields.py  i0d1e2f3a4b5_drop_ip_allocations.py  j1k2l3m4n5o6_region_plane_scope.py  k2l3m4n5o6p7_rename_user_regions_permissions.py
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/models/: __init__.py  backup.py  change_log.py  ip_allocation.py  network_plane_type.py  region.py  region_network_plane.py  user.py
backend/app/routers/: allocations.py  auth.py  backup.py  change_logs.py  excel.py  lookup.py  network_plane_types.py  regions.py  stats.py  users.py
backend/app/schemas/: __init__.py  backup.py  change_log.py  common.py  excel.py  ip_allocation.py  lookup.py  network_plane_type.py  region.py  user.py
backend/app/services/: allocation.py  auth.py  backup.py  backup_scheduler.py  change_log.py  excel.py  lookup.py  network_plane_type.py  region.py  region_plane.py
backend/app/utils/: excel_utils.py  ip_utils.py  time_utils.py
backend/tests/: conftest.py  test_allocations.py  test_auth_permissions.py  test_backup.py  test_excel_utils.py  test_health.py  test_lookup.py  test_network_plane_types.py  test_plane_tree.py  test_regions.py  test_users.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  run_build.sh  start.sh
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  backup.js  excel.js  lookup.js  networkPlaneTypes.js  regions.js  request.js  users.js
frontend/src/assets/styles/: main.css
frontend/src/components/layout/: AppLayout.vue  SideMenu.vue
frontend/src/router/: index.js
frontend/src/stores/: app.js
frontend/src/utils/: time.js
frontend/src/views/: BackupConfig.vue  ChangeLogs.vue  Dashboard.vue  ImportExport.vue  Login.vue  Lookup.vue  PlaneTypes.vue  RegionDetail.vue  Regions.vue  Users.vue
scripts/: count_code_lines.py
