[project]
name = "hcs-lld-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.19",
    "pydantic-settings>=2.7.0",
    "boto3>=1.34.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "I",   # import sorting
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false

# SQLAlchemy Column[str] vs str 是已知的类型兼容问题，
# 与 from __future__ import annotations 配合时 mypy 无法正确解析。
# 在 services 和 routers 中使用 # type: ignore 逐行压制过于冗长，
# 改为按文件目录使用 overrides。
[[tool.mypy.overrides]]
module = ["app.services.*", "app.routers.*"]
disable_error_code = ["arg-type", "return-value", "assignment", "index"]
